--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
   </head>
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   <body>
     <h1>Nice. It's looking good already.</h1>
   </body>
