Change title to h4

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,8 +14,8 @@
     <div class="container">
       <header class="py-3">
         <div class="row flex-nowrap justify-content-between align-items-center">
-          <div class="col-12 text-center">        
-            <a class="blog-header-logo text-dark" href="#">Персональная страница Ковалева Андрея Юрьевича</a>
+          <div class="col-12 text-center">
+            <a class="text-dark" href="#"><h4>Персональная страница Ковалева Андрея Юрьевича</h1></a>
           </div>
         </div>
       </header>
