--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,7 +7,7 @@
         <header class="py-3">
           <div class="row flex-nowrap justify-content-between align-items-center">
             <div class="col-12 text-center">
-              <a class="text-dark" href="#"><h4>{{ .Site.Title }}</h1></a>
+              <a class="text-dark" href="/"><h4>{{ .Site.Title }}</h1></a>
             </div>
           </div>
         </header>
